[gd_scene load_steps=29 format=2]

[ext_resource path="res://assets/UI/Font.tres" type="DynamicFont" id=1]
[ext_resource path="res://TitleScreen/Settings Popup.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=40]
bg_color = Color( 0.45098, 0.129412, 0.101961, 1 )
border_width_top = 20
border_color = Color( 0.490196, 0.490196, 0.490196, 1 )
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
expand_margin_top = 20.0
shadow_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=56]
content_margin_left = 10.0
content_margin_right = 10.0
bg_color = Color( 0.156863, 0.0470588, 0.0392157, 1 )

[sub_resource type="StyleBoxFlat" id=57]
content_margin_left = 10.0
content_margin_right = 10.0
bg_color = Color( 0.45098, 0.129412, 0.101961, 1 )
expand_margin_left = 10.0
expand_margin_right = 10.0

[sub_resource type="StyleBoxFlat" id=58]
bg_color = Color( 0.188235, 0.0588235, 0.0470588, 1 )

[sub_resource type="StyleBoxFlat" id=42]
bg_color = Color( 0.12549, 0.0392157, 0.0313726, 1 )
border_color = Color( 0.501961, 0.160784, 0.137255, 1 )
border_blend = true

[sub_resource type="StyleBoxLine" id=43]
color = Color( 0.462745, 0.462745, 0.501961, 1 )
thickness = 10
vertical = true

[sub_resource type="StyleBoxLine" id=44]
color = Color( 0.333333, 0.333333, 0.372549, 1 )
thickness = 10
vertical = true

[sub_resource type="StyleBoxFlat" id=45]
bg_color = Color( 0.133333, 0.133333, 0.152941, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxLine" id=46]
color = Color( 0.164706, 0.658824, 0.92549, 1 )
thickness = 10
vertical = true

[sub_resource type="DynamicFontData" id=59]
font_path = "res://assets/Fonts/TF2.ttf"

[sub_resource type="DynamicFont" id=47]
size = 70
outline_size = 5
outline_color = Color( 0.145098, 0.145098, 0.164706, 1 )
use_filter = true
font_data = SubResource( 59 )

[sub_resource type="DynamicFontData" id=60]
font_path = "res://assets/Fonts/TF2.ttf"

[sub_resource type="DynamicFont" id=48]
size = 40
outline_size = 5
outline_color = Color( 0.145098, 0.145098, 0.164706, 1 )
use_filter = true
font_data = SubResource( 60 )

[sub_resource type="DynamicFont" id=49]
size = 50
outline_size = 5
outline_color = Color( 0.145098, 0.145098, 0.164706, 1 )
use_filter = true
font_data = SubResource( 60 )

[sub_resource type="DynamicFont" id=50]
size = 30
outline_size = 5
outline_color = Color( 0.145098, 0.145098, 0.164706, 1 )
use_filter = true
font_data = SubResource( 60 )

[sub_resource type="DynamicFontData" id=61]
font_path = "res://assets/Fonts/TF2.ttf"

[sub_resource type="DynamicFont" id=51]
size = 30
outline_size = 5
outline_color = Color( 0.145098, 0.145098, 0.164706, 1 )
use_filter = true
font_data = SubResource( 61 )

[sub_resource type="StyleBoxFlat" id=52]
bg_color = Color( 0.333333, 0.333333, 0.372549, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id=53]
bg_color = Color( 1, 0.698039, 0.458824, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id=54]
bg_color = Color( 0.0196078, 0.0196078, 0.0196078, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id=55]
bg_color = Color( 0.145098, 0.145098, 0.164706, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="DynamicFontData" id=17]
font_path = "res://assets/Fonts/TF2.ttf"

[sub_resource type="DynamicFont" id=68]
size = 35
outline_size = 3
outline_color = Color( 0.145098, 0.145098, 0.164706, 1 )
use_filter = true
font_data = SubResource( 17 )

[sub_resource type="StyleBoxFlat" id=69]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="DynamicFont" id=62]
size = 35
outline_size = 3
outline_color = Color( 0.145098, 0.145098, 0.164706, 1 )
use_filter = true
font_data = SubResource( 17 )

[sub_resource type="StyleBoxFlat" id=63]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[node name="Settings Popup" type="WindowDialog"]
pause_mode = 2
anchor_left = 0.40625
anchor_top = 0.259722
anchor_right = 0.982813
anchor_bottom = 0.820833
rect_min_size = Vector2( 738, 404 )
mouse_filter = 1
custom_styles/panel = SubResource( 40 )
window_title = "Settings"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": true,
"_edit_vertical_guides_": [  ],
"_editor_description_": ""
}

[node name="TabContainer" type="TabContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 0.000167847
margin_bottom = 0.000183105
custom_styles/tab_fg = SubResource( 56 )
custom_styles/tab_bg = SubResource( 57 )
custom_styles/panel = SubResource( 58 )
drag_to_rearrange_enabled = true
__meta__ = {
"_edit_use_anchors_": true,
"_editor_description_": ""
}

[node name="Game" type="Tabs" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 24.0
mouse_filter = 1
tab_close_display_policy = 2

[node name="Panel2" type="Panel" parent="TabContainer/Game"]
self_modulate = Color( 1, 1, 1, 0.5 )
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 42 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Mouse Sense" type="HScrollBar" parent="TabContainer/Game/Panel2"]
anchor_left = 0.52895
anchor_top = 0.187359
anchor_right = 0.84145
anchor_bottom = 0.256804
rect_min_size = Vector2( 100, 0 )
custom_styles/grabber_highlight = SubResource( 43 )
custom_styles/grabber = SubResource( 44 )
custom_styles/scroll = SubResource( 45 )
custom_styles/grabber_pressed = SubResource( 46 )
max_value = 10.0
step = 0.01
value = 2.5
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Mouse Sense2" type="SpinBox" parent="TabContainer/Game/Panel2"]
anchor_left = 0.848238
anchor_top = 0.189474
anchor_right = 0.985095
anchor_bottom = 0.252632
max_value = 10.0
step = 0.01
value = 2.5
align = 1
suffix = "sens"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Sense Value" type="Label" parent="TabContainer/Game/Panel2"]
anchor_left = 0.644177
anchor_top = 0.0162164
anchor_right = 0.771749
anchor_bottom = 0.208108
grow_horizontal = 2
custom_fonts/font = SubResource( 47 )
text = "2.5"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label4" type="Label" parent="TabContainer/Game/Panel2"]
anchor_left = 0.0813008
anchor_top = 0.189616
anchor_right = 0.516795
anchor_bottom = 0.273037
margin_right = 6.10352e-05
custom_fonts/font = ExtResource( 1 )
text = "Mouse sensitivity: "
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Viewmodel FOV Slider" type="HScrollBar" parent="TabContainer/Game/Panel2"]
anchor_left = 0.52895
anchor_top = 0.465789
anchor_right = 0.84145
anchor_bottom = 0.535234
rect_min_size = Vector2( 100, 0 )
custom_styles/grabber_highlight = SubResource( 43 )
custom_styles/grabber = SubResource( 44 )
custom_styles/scroll = SubResource( 45 )
custom_styles/grabber_pressed = SubResource( 46 )
min_value = 60.0
max_value = 120.0
step = 1.0
value = 90.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Viewmodel FOV Slider2" type="SpinBox" parent="TabContainer/Game/Panel2"]
anchor_left = 0.852304
anchor_top = 0.465789
anchor_right = 0.985095
anchor_bottom = 0.528947
min_value = 60.0
max_value = 120.0
value = 90.0
align = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Viewmodel FOV Value" type="Label" parent="TabContainer/Game/Panel2"]
anchor_left = 0.644064
anchor_top = 0.278378
anchor_right = 0.756547
anchor_bottom = 0.47027
margin_left = 3.05176e-05
grow_horizontal = 2
custom_fonts/font = SubResource( 47 )
text = "90"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Viewmodel FOV" type="Label" parent="TabContainer/Game/Panel2"]
anchor_left = 0.0813008
anchor_top = 0.469526
anchor_right = 0.45853
anchor_bottom = 0.552947
margin_right = 3.05176e-05
custom_fonts/font = ExtResource( 1 )
text = "Viewmodel FOV: "
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="FOV Slider" type="HScrollBar" parent="TabContainer/Game/Panel2"]
anchor_left = 0.52895
anchor_top = 0.736842
anchor_right = 0.84145
anchor_bottom = 0.806287
rect_min_size = Vector2( 100, 0 )
custom_styles/grabber_highlight = SubResource( 43 )
custom_styles/grabber = SubResource( 44 )
custom_styles/scroll = SubResource( 45 )
custom_styles/grabber_pressed = SubResource( 46 )
min_value = 70.0
max_value = 90.0
step = 1.0
value = 75.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="FOV Slider2" type="SpinBox" parent="TabContainer/Game/Panel2"]
anchor_left = 0.850949
anchor_top = 0.736842
anchor_right = 0.985095
anchor_bottom = 0.8
min_value = 70.0
max_value = 90.0
value = 75.0
align = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="FOV Value" type="Label" parent="TabContainer/Game/Panel2"]
anchor_left = 0.644064
anchor_top = 0.564865
anchor_right = 0.754384
anchor_bottom = 0.756757
margin_left = 3.05176e-05
grow_horizontal = 2
custom_fonts/font = SubResource( 47 )
text = "75"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="FOV" type="Label" parent="TabContainer/Game/Panel2"]
anchor_left = 0.0813008
anchor_top = 0.740406
anchor_right = 0.458526
anchor_bottom = 0.823826
custom_fonts/font = ExtResource( 1 )
text = "Camera FOV: "
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Audio" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 24.0
mouse_filter = 1
tab_close_display_policy = 2

[node name="Panel" type="Panel" parent="TabContainer/Audio"]
self_modulate = Color( 1, 1, 1, 0.5 )
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 42 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Master Volume" type="HScrollBar" parent="TabContainer/Audio/Panel"]
anchor_left = 0.529024
anchor_top = 0.345504
anchor_right = 0.840677
anchor_bottom = 0.374451
margin_left = 3.05176e-05
rect_min_size = Vector2( 100, 0 )
rect_pivot_offset = Vector2( 96, -75.4585 )
custom_styles/grabber_highlight = SubResource( 43 )
custom_styles/grabber = SubResource( 44 )
custom_styles/scroll = SubResource( 45 )
custom_styles/grabber_pressed = SubResource( 46 )
max_value = 1.0
step = 0.01
value = 0.5
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Effects Volume" type="HScrollBar" parent="TabContainer/Audio/Panel"]
anchor_left = 0.529024
anchor_top = 0.486428
anchor_right = 0.841524
anchor_bottom = 0.515595
margin_left = 3.05176e-05
margin_bottom = 1.52588e-05
rect_min_size = Vector2( 100, 0 )
rect_pivot_offset = Vector2( 96, -133.997 )
custom_styles/grabber_highlight = SubResource( 43 )
custom_styles/grabber = SubResource( 44 )
custom_styles/scroll = SubResource( 45 )
custom_styles/grabber_pressed = SubResource( 46 )
max_value = 1.0
step = 0.01
value = 0.5
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Music2" type="HScrollBar" parent="TabContainer/Audio/Panel"]
anchor_left = 0.529024
anchor_top = 0.653808
anchor_right = 0.841524
anchor_bottom = 0.682974
margin_left = 3.05176e-05
margin_top = -1.52588e-05
rect_min_size = Vector2( 100, 0 )
rect_pivot_offset = Vector2( 96, -202.152 )
custom_styles/grabber_highlight = SubResource( 43 )
custom_styles/grabber = SubResource( 44 )
custom_styles/scroll = SubResource( 45 )
custom_styles/grabber_pressed = SubResource( 46 )
max_value = 1.0
step = 0.01
value = 0.5
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Volume Percent" type="Label" parent="TabContainer/Audio/Panel"]
anchor_left = 0.876694
anchor_top = 0.303837
anchor_right = 0.973569
anchor_bottom = 0.4091
margin_bottom = -3.05176e-05
grow_horizontal = 2
rect_pivot_offset = Vector2( -165.461, -57 )
custom_fonts/font = SubResource( 48 )
text = "50%"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Volume Percent2" type="Label" parent="TabContainer/Audio/Panel"]
anchor_left = 0.876694
anchor_top = 0.450317
anchor_right = 0.973569
anchor_bottom = 0.555581
grow_horizontal = 2
rect_pivot_offset = Vector2( -165.462, -118 )
custom_fonts/font = SubResource( 48 )
text = "50%"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Volume Percent3" type="Label" parent="TabContainer/Audio/Panel"]
anchor_left = 0.876694
anchor_top = 0.621863
anchor_right = 0.973569
anchor_bottom = 0.727127
margin_top = 1.52588e-05
grow_horizontal = 2
rect_pivot_offset = Vector2( -165.462, -188 )
custom_fonts/font = SubResource( 48 )
text = "50%"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Volume" type="Label" parent="TabContainer/Audio/Panel"]
anchor_left = 0.615658
anchor_top = 0.03386
anchor_right = 0.864769
anchor_bottom = 0.148984
margin_left = -46.3556
margin_top = 8.13338
margin_right = -20.1995
margin_bottom = 15.3863
rect_pivot_offset = Vector2( 66.3353, 19 )
custom_fonts/font = SubResource( 49 )
text = "volume:"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Master" type="Label" parent="TabContainer/Audio/Panel"]
anchor_left = 0.56418
anchor_top = 0.245482
anchor_right = 0.804024
anchor_bottom = 0.327061
rect_pivot_offset = Vector2( 66.3635, -35 )
custom_fonts/font = SubResource( 50 )
text = "Master"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Effects" type="Label" parent="TabContainer/Audio/Panel"]
anchor_left = 0.56418
anchor_top = 0.396206
anchor_right = 0.804024
anchor_bottom = 0.477785
rect_pivot_offset = Vector2( 66.3635, -97 )
custom_fonts/font = SubResource( 50 )
text = "Effects"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Music" type="Label" parent="TabContainer/Audio/Panel"]
anchor_left = 0.56418
anchor_top = 0.567521
anchor_right = 0.804024
anchor_bottom = 0.6491
margin_top = -1.52588e-05
margin_bottom = -0.000366211
rect_pivot_offset = Vector2( 66.3635, -167 )
custom_fonts/font = SubResource( 50 )
text = "Music"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Quit2" type="Button" parent="TabContainer/Audio/Panel"]
anchor_left = 0.53523
anchor_top = 0.836842
anchor_right = 0.857724
anchor_bottom = 0.976316
rect_pivot_offset = Vector2( 64.3354, -257 )
focus_mode = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 51 )
custom_styles/hover = SubResource( 52 )
custom_styles/pressed = SubResource( 53 )
custom_styles/disabled = SubResource( 54 )
custom_styles/normal = SubResource( 55 )
enabled_focus_mode = 0
text = "Change song"
expand_icon = true
__meta__ = {
"_edit_use_anchors_": true,
"_editor_description_": ""
}

[node name="Video" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 24.0
mouse_filter = 1
tab_close_display_policy = 2

[node name="Panel" type="Panel" parent="TabContainer/Video"]
self_modulate = Color( 1, 1, 1, 0.5 )
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 42 )

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Video/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Video/Panel/MarginContainer"]
margin_right = 718.0
margin_bottom = 360.0
rect_min_size = Vector2( 718, 360 )

[node name="HBoxContainer5" type="HBoxContainer" parent="TabContainer/Video/Panel/MarginContainer/VBoxContainer"]
margin_right = 718.0
margin_bottom = 62.0

[node name="ResolutionLabel" type="Label" parent="TabContainer/Video/Panel/MarginContainer/VBoxContainer/HBoxContainer5"]
margin_top = 15.0
margin_right = 181.0
margin_bottom = 46.0
rect_pivot_offset = Vector2( 66.3635, -35 )
custom_fonts/font = SubResource( 50 )
text = "Resolution"
align = 1
valign = 1

[node name="ResolutionBtn" type="OptionButton" parent="TabContainer/Video/Panel/MarginContainer/VBoxContainer/HBoxContainer5"]
margin_left = 490.0
margin_right = 718.0
margin_bottom = 62.0
rect_min_size = Vector2( 228, 62 )
focus_mode = 0
size_flags_horizontal = 10
custom_fonts/font = SubResource( 68 )
custom_styles/normal = SubResource( 69 )
enabled_focus_mode = 0
text = "1280x720"
align = 1
items = [ "1280x720", null, false, 0, null, "1360x768", null, false, 1, null, "1600x900", null, false, 2, null, "1920x1080", null, false, 3, null ]
selected = 0

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Video/Panel/MarginContainer/VBoxContainer"]
margin_top = 66.0
margin_right = 718.0
margin_bottom = 128.0

[node name="DisplayLabel" type="Label" parent="TabContainer/Video/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
margin_top = 15.0
margin_right = 213.0
margin_bottom = 46.0
rect_pivot_offset = Vector2( 66.3635, -35 )
custom_fonts/font = SubResource( 50 )
text = "Display Mode"
align = 1
valign = 1

[node name="DisplayBtn" type="OptionButton" parent="TabContainer/Video/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 490.0
margin_right = 718.0
margin_bottom = 62.0
rect_min_size = Vector2( 228, 62 )
focus_mode = 0
size_flags_horizontal = 10
custom_fonts/font = SubResource( 62 )
custom_styles/normal = SubResource( 63 )
enabled_focus_mode = 0
text = "Windowed"
align = 1
items = [ "Windowed", null, false, 0, null, "Fullscreen", null, false, 1, null ]
selected = 0

[node name="HBoxContainer2" type="HBoxContainer" parent="TabContainer/Video/Panel/MarginContainer/VBoxContainer"]
margin_top = 132.0
margin_right = 718.0
margin_bottom = 194.0

[node name="VsyncLabel" type="Label" parent="TabContainer/Video/Panel/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_top = 15.0
margin_right = 102.0
margin_bottom = 46.0
rect_pivot_offset = Vector2( 66.3635, -35 )
custom_fonts/font = SubResource( 50 )
text = "Vsync"
align = 1
valign = 1

[node name="VsyncBtn" type="CheckButton" parent="TabContainer/Video/Panel/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 490.0
margin_right = 718.0
margin_bottom = 62.0
rect_min_size = Vector2( 228, 62 )
focus_mode = 0
size_flags_horizontal = 10
custom_fonts/font = SubResource( 62 )
custom_styles/normal = SubResource( 63 )
enabled_focus_mode = 0
align = 1

[node name="HBoxContainer4" type="HBoxContainer" parent="TabContainer/Video/Panel/MarginContainer/VBoxContainer"]
margin_top = 198.0
margin_right = 718.0
margin_bottom = 260.0

[node name="DisplayFpsLabel" type="Label" parent="TabContainer/Video/Panel/MarginContainer/VBoxContainer/HBoxContainer4"]
margin_top = 15.0
margin_right = 179.0
margin_bottom = 46.0
rect_pivot_offset = Vector2( 66.3635, -35 )
custom_fonts/font = SubResource( 50 )
text = "display fps"
align = 1
valign = 1

[node name="DisplayFpsBtn" type="CheckButton" parent="TabContainer/Video/Panel/MarginContainer/VBoxContainer/HBoxContainer4"]
margin_left = 490.0
margin_right = 718.0
margin_bottom = 62.0
rect_min_size = Vector2( 228, 62 )
focus_mode = 0
size_flags_horizontal = 10
custom_fonts/font = SubResource( 62 )
custom_styles/normal = SubResource( 63 )
enabled_focus_mode = 0
align = 1

[connection signal="popup_hide" from="." to="." method="_on_Settings_Popup_popup_hide"]
[connection signal="value_changed" from="TabContainer/Game/Panel2/Mouse Sense" to="." method="_on_Mouse_Sense_value_changed"]
[connection signal="value_changed" from="TabContainer/Game/Panel2/Mouse Sense2" to="." method="_on_Mouse_Sense2_value_changed"]
[connection signal="value_changed" from="TabContainer/Game/Panel2/Viewmodel FOV Slider" to="." method="_on_Viewmodel_FOV_Slider_value_changed"]
[connection signal="value_changed" from="TabContainer/Game/Panel2/Viewmodel FOV Slider2" to="." method="_on_Viewmodel_FOV_Slider2_value_changed"]
[connection signal="value_changed" from="TabContainer/Game/Panel2/FOV Slider" to="." method="_on_FOV_Slider_value_changed"]
[connection signal="value_changed" from="TabContainer/Game/Panel2/FOV Slider2" to="." method="_on_FOV_Slider2_value_changed"]
[connection signal="value_changed" from="TabContainer/Audio/Panel/Master Volume" to="." method="_on_Master_Volume_value_changed"]
[connection signal="value_changed" from="TabContainer/Audio/Panel/Effects Volume" to="." method="_on_Effects_Volume_value_changed"]
[connection signal="value_changed" from="TabContainer/Audio/Panel/Music2" to="." method="_on_Music2_value_changed"]
[connection signal="pressed" from="TabContainer/Audio/Panel/Quit2" to="." method="_on_Quit2_pressed"]
[connection signal="item_selected" from="TabContainer/Video/Panel/MarginContainer/VBoxContainer/HBoxContainer5/ResolutionBtn" to="." method="_on_ResolutionBtn_item_selected"]
[connection signal="item_selected" from="TabContainer/Video/Panel/MarginContainer/VBoxContainer/HBoxContainer/DisplayBtn" to="." method="_on_DisplayBtn_item_selected"]
[connection signal="toggled" from="TabContainer/Video/Panel/MarginContainer/VBoxContainer/HBoxContainer2/VsyncBtn" to="." method="_on_VsyncBtn_toggled"]
[connection signal="toggled" from="TabContainer/Video/Panel/MarginContainer/VBoxContainer/HBoxContainer4/DisplayFpsBtn" to="." method="_on_DisplayFpsBtn_toggled"]
